Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1785

SIGSEGV if tablet copy attempt started while tablet is bootstrapping

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.1.0
    • 1.2.0
    • tablet
    • None

    Description

      This is highly unlikely unless triggered by an admin tool.

      The bug is as follows:

      1. Tablet server restarted, currently bootstrapping a tablet
      2. TabletCopySession started for the bootstrapping tablet
      3. During the TabletCopySession::Init() phase, we get a Log pointer from a TabletPeer object and use it without checking for nullptr
      4. SIGSEGV

      Attachments

        Activity

          People

            mpercy Mike Percy
            mpercy Mike Percy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: